fixed bug login page not centered

--- a/app/frontend/index.css
+++ b/app/frontend/index.css
@@ -36,6 +36,8 @@ header {
 }
 
 main {
+    grid-area: 2 / 1 / 3 / 2;
     position: relative;
     height: 100%;
+    width: 100%;
 }
